--- a/active_learning_mnist_visual.ipynb
+++ b/active_learning_mnist_visual.ipynb
@@ -32,7 +32,7 @@
    "execution_count": 3,
    "id": "354775d6",
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -243,9 +243,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "7453850f",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -504,7 +502,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbd9b1ec",
+   "id": "3fa8a481",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5bc3391",
    "metadata": {},
    "outputs": [],
    "source": []
